--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
     "babel-standalone": "^6.26.0",
+    "lodash": "^4.17.14",
     "monaco-editor": "^0.17.1",
     "source-map": "^0.7.3"
   }
